Mise en place de getBar (Fonctionnel)
